# nidhogg

./: '  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
data/: nao.urdf  plane.urdf
examples/: builder.rs  hello_nao.rs
nidhogg/: Cargo.toml  test.txt
nidhogg/examples/: builder.rs  generic_backend.rs  hello_bullet.rs  hello_coppelia.rs  hello_lola.rs  hello_nao.rs
nidhogg/src/: error.rs  lib.rs  lola.rs  types.rs
nidhogg/src/backend/: coppelia.rs  lola.rs  mod.rs
nidhogg/src/backend/bullet/: environment.rs  mod.rs  nao.rs
nidhogg/src/backends/: coppelia.rs  lola.rs  mod.rs
nidhogg/src/types/: color.rs  joint_array.rs  mod.rs  vector.rs
nidhogg_derive/: Cargo.toml
nidhogg_derive/src/: builder.rs  filler.rs  iterable.rs  lib.rs
nidhogg_derive/tests/: iterable_test.rs
src/: error.rs  lib.rs  lola.rs  types.rs
