[package]
name = "nidhogg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp-serde = { version = "1.1.1", optional = true }
serde = { version = "1.0.150", features = ["derive"] }
thiserror = "1.0.38"
miette = { version = "5.10.0" }
tracing = "0.1.37"
nidhogg_derive = { workspace = true }
zmq_remote_api = { git = "https://github.com/IntelligentRoboticsLab/coppelia-zmq", optional = true }


[dev-dependencies]
tracing-subscriber = "0.3.16"

[features]
default = ["serde", "lola"]

serde = []
lola = ["dep:rmp-serde"]
coppelia = ["dep:zmq_remote_api"]
