[package]
name = "nidhogg"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp-serde = { version = "1.1.1", optional = true }
serde = { version = "1.0.150", features = ["derive"] }
thiserror = "1.0.38"
miette = { version = "7.4.0" }
tracing = "0.1.37"
nidhogg_derive = { workspace = true }
coppeliasim_zmq_remote_api = { git = "https://github.com/samuel-cavalcanti/rust_zmqRemoteApi", optional = true }
num = "0.4.1"
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
bevy_ecs = { version = "0.15.0", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3.16"

[features]
default = ["serde", "lola", "bevy"]

serde = []
lola = ["dep:rmp-serde"]
coppelia = ["dep:coppeliasim_zmq_remote_api"]
bevy = ["dep:bevy_ecs"]
